[tool.poetry]
name = "Pong-Game-with-Pygame"
version = "0.1.0"
description = "A simple Pong game with Pygame"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
taskipy = "^1.10.2"

[tool.taskipy.tasks]
format = "black *.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[pong.key]
up = 'K_UP'
down = 'K_DOWN'
