[tool.poetry]
name = "Pong-Game-with-Pygame"
version = "0.1.0"
description = "A simple Pong game with Pygame"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
taskipy = "^1.10.2"
flake8 = "^4.0.1"

[tool.taskipy.tasks]
format = "black *.py"
lint = "flake8 --extend-ignore=E203 --max-line-length=119"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[pong.key]
up = 'K_UP'
down = 'K_DOWN'

[pong.font]
path = "/Users/kanta/Library/Fonts/BIZUDGothic-Regular.ttf"
size = 40